--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
-body {font-family:sans-serif; margin:2vw; font-size:2vw;}
+/* Media query settings for smaller-screen mobile devices. Mostly font and object sizes. */
+:root {font-size:4vw;}
+body {font-family:sans-serif; margin:2vw;}
 h2 {text-align:center; padding:2vw; background-color:#eee; border-radius:2vw;}
-p {font-size:2vw; margin:2vw;}
+p {margin:2vw;}
 img.my-picture {display:block; margin-left:auto; margin-right:auto;}
 a:link,a:visited,a:active {color:#f90; text-decoration:none;}
 a:hover {color:#004;}
@@ -8,13 +10,18 @@ a:hover {color:#004;}
 .over {background-color:#f90;}
 .open {background-color:#f90;}
 .project-details {text-indent:2vw; color:#888;}
+.circle {float:right; display:inline-block; width:3.6vw; height:3.6vw; margin:0; padding:0; background-color:#fff; border-radius:2vw;}
+.downarrow {border-right:1vw solid #eee; border-bottom:1vw solid #eee; width:1vw; height:1vw; transform: rotate(45deg); margin-top:0.6vw; margin-left:0.8vw;}
+.uparrow {display:none; border-right:1vw solid #f90; border-bottom:1vw solid #f90; width:1vw; height:1vw; transform: rotate(-135deg); margin-top:1vw; margin-left:0.8vw;}
 
-.arrow {
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 50px 0 50px 50px;
-  border-color: transparent transparent transparent #ffffff;
+/* Media query settings for smaller-screen mobile devices. Mostly font and object sizes. */
+@media (min-width:600px){
+  :root {font-size:2vw;}
+  body {}
+  h2 {}
+  p {}
+  .project-details {}
+  .circle {}
+  .downarrow {}
+  .uparrow {}
 }
-
-/*@media (max-width:600px){:root {font-size:4vw;}}*/
