Adding more content to main page. Moved picture to be more prominent. Added a page title header above the other sections.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* Media query settings for smaller-screen mobile devices. Mostly font and object sizes. */
 :root {font-size:4vw;}
 body {font-family:sans-serif; margin:4vw;}
+h1 {text-align:center;}
 h2 {text-align:center; padding:4vw; background-color:#eee; border-radius:4vw;}
 p {margin:4vw;}
 img.my-picture {display:block; margin-left:auto; margin-right:auto;}
