--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,28 @@
-/* Media query settings for large-screen devices. All font and object sizes. */
-@media (min-width:600px){
-  :root {font-size:2vw;}
-  body {margin:2vw;}
-  h2 {padding:2vw; border-radius:2vw;}
-  p {margin:2vw;}
-  .project-details {text-indent:2vw;}
-  .circle {width:3.6vw; height:3.6vw; border-radius:2vw;}
-  .downarrow {border-right:1vw solid #eee; border-bottom:1vw solid #eee; width:1vw; height:1vw; margin-top:0.6vw; margin-left:0.8vw;}
-  .uparrow {display:none; border-right:1vw solid #f90; border-bottom:1vw solid #f90; width:1vw; height:1vw; margin-top:1vw; margin-left:0.8vw;}
-}
-
-/* Media query settings for smaller-screen mobile devices. Mostly font and object sizes. */
-:root {font-size:4vw;}
-body {font-family:sans-serif; margin:4vw;}
+/* Media query settings for large-screen mobile and desktop devices. */
+:root {font-size:2vw;}
+body {font-family:sans-serif; margin:2vw;}
 h1 {text-align:center;}
-h2 {text-align:center; padding:4vw; background-color:#eee; border-radius:4vw;}
-p {margin:4vw;}
+h2 {text-align:center; padding:2vw; background-color:#ddd; border-radius:2vw; padding-left:5.6vw;}
+p {margin:2vw;}
 img.my-picture {display:block; margin-left:auto; margin-right:auto;}
 a:link,a:visited,a:active {color:#f90; text-decoration:none;}
 a:hover {color:#004;}
 .content {width:100%;}
 .over {background-color:#f90;}
 .open {background-color:#f90;}
-.project-details {text-indent:4vw; color:#888;}
-.circle {float:right; display:inline-block; width:7.2vw; height:7.2vw; margin:0; padding:0; background-color:#fff; border-radius:4vw;}
-.downarrow {border-right:2vw solid #eee; border-bottom:2vw solid #eee; width:2vw; height:2vw; transform: rotate(45deg); margin-top:1.2vw; margin-left:1.7vw;}
-.uparrow {display:none; border-right:2vw solid #f90; border-bottom:2vw solid #f90; width:2vw; height:2vw; transform: rotate(-135deg); margin-top:2.1vw; margin-left:1.6vw;}
+.project-details {text-indent:2vw; color:#888;}
+.circle {float:right; display:inline-block; width:3.6vw; height:3.6vw; margin:0; padding:0; background-color:#fff; border-radius:2vw;}
+.downarrow {border-right:1vw solid #ddd; border-bottom:1vw solid #ddd; width:1vw; height:1vw; transform: rotate(45deg); margin-top:0.6vw; margin-left:0.8vw;}
+.uparrow {display:none; border-right:1vw solid #f90; border-bottom:1vw solid #f90; width:1vw; height:1vw; transform: rotate(-135deg); margin-top:1vw; margin-left:0.8vw;}
+
+/* Media query settings for small-screen devices. */
+@media only screen and (max-width: 600px){
+  :root {font-size:4vw;}
+  body {margin:4vw;}
+  h2 {padding:4vw; border-radius:4vw; padding-left:11.2vw;}
+  p {margin:4vw;}
+  .project-details {text-indent:4vw;}
+  .circle {width:7.2vw; height:7.2vw; border-radius:4vw;}
+  .downarrow {border-right:2vw solid #ddd; border-bottom:2vw solid #ddd; width:2vw; height:2vw; margin-top:1.2vw; margin-left:1.7vw;}
+  .uparrow {border-right:2vw solid #f90; border-bottom:2vw solid #f90; width:2vw; height:2vw; margin-top:2.1vw; margin-left:1.6vw;}
+}
