--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,22 @@
-/* Media query settings for LARGE screens. */
-@media all and (min-width: 500px) {
-  :root {font-size:2vw;}
-  body {font-family:sans-serif; margin:2vw;}
-  h1 {text-align:center;}
-  h2 {text-align:center; padding:2vw; background-color:#ddd; border-radius:2vw; padding-left:5.6vw;}
-  p {margin:2vw;}
-  img.my-picture {display:block; margin-left:auto; margin-right:auto;}
-  a:link,a:visited,a:active {color:#f90; text-decoration:none;}
-  a:hover {color:#004;}
-  .content {width:100%;}
-  .over {background-color:#f90;}
-  .open {background-color:#f90;}
-  .project-details {text-indent:2vw; color:#888;}
-  .circle {float:right; display:inline-block; width:3.6vw; height:3.6vw; margin:0; padding:0; background-color:#fff; border-radius:2vw;}
-  .downarrow {border-right:1vw solid #ddd; border-bottom:1vw solid #ddd; width:1vw; height:1vw; transform: rotate(45deg); margin-top:0.6vw; margin-left:0.9vw;}
-  .uparrow {display:none; border-right:1vw solid #f90; border-bottom:1vw solid #f90; width:1vw; height:1vw; transform: rotate(-135deg); margin-top:1vw; margin-left:0.9vw;}
-}
+/* Standard CSS for _LARGE_ screens. */
+:root {font-size:3vw;}
+body {font-family:sans-serif; margin:3vw;}
+h1 {text-align:center;}
+h2 {text-align:center; padding:3vw; background-color:#ddd; border-radius:3vw; padding-left:8.4vw;}
+p {margin:3vw;}
+img.my-picture {display:block; margin-left:auto; margin-right:auto;}
+a:link,a:visited,a:active {color:#f90; text-decoration:none;}
+a:hover {color:#004;}
+.content {width:100%;}
+.over {background-color:#f90;}
+.open {background-color:#f90;}
+.project-details {text-indent:3vw; color:#888;}
+.circle {float:right; display:inline-block; width:5.4vw; height:5.4vw; margin:0; padding:0; background-color:#fff; border-radius:3vw;}
+.downarrow {border-right:1.6vw solid #ddd; border-bottom:1.6vw solid #ddd; width:1.6vw; height:1.6vw; transform: rotate(45deg); margin-top:0.8vw; margin-left:1.1vw;}
+.uparrow {display:none; border-right:1.6vw solid #f90; border-bottom:1.6vw solid #f90; width:1.6vw; height:1.6vw; transform: rotate(-135deg); margin-top:1.5vw; margin-left:1.1vw;}
 
-/* Media query settings for SMALL screens. */
-@media not all and (min-width: 500px){
+/* Media query settings for _SMALL_ (<= 600px width) screens. */
+@media only (max-width: 600px){
   :root {font-size:4vw;}
   body {font-family:sans-serif; margin:4vw;}
   h1 {text-align:center;}
@@ -36,8 +34,8 @@
   .uparrow {transform: rotate(-135deg); display:none; border-right:2vw solid #f90; border-bottom:2vw solid #f90; width:2vw; height:2vw; margin-top:2.1vw; margin-left:1.6vw;}
 }
 
-/* Media query settings for *H U G E* screens. */
-@media all and (min-width: 1000px){
+/* Media query settings for _HUGE_ (>= 601px width) screens. */
+@media only (min-width: 601px){
   :root {font-size:2vw;}
   body {font-family:sans-serif; margin:2vw;}
   h1 {text-align:center;}
