--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ a:hover {color:#004;}
 .uparrow {display:none; border-right:1.6vw solid #f90; border-bottom:1.6vw solid #f90; width:1.6vw; height:1.6vw; transform: rotate(-135deg); margin-top:1.5vw; margin-left:1.1vw;}
 
 /* Media query settings for _SMALL_ (<= 600px width) screens. */
-@media only (max-width: 600px){
+@media (max-width: 500px){
   :root {font-size:4vw;}
   body {font-family:sans-serif; margin:4vw;}
   h1 {text-align:center;}
@@ -35,7 +35,7 @@ a:hover {color:#004;}
 }
 
 /* Media query settings for _HUGE_ (>= 601px width) screens. */
-@media only (min-width: 601px){
+@media (min-width: 700px){
   :root {font-size:2vw;}
   body {font-family:sans-serif; margin:2vw;}
   h1 {text-align:center;}
@@ -49,6 +49,6 @@ a:hover {color:#004;}
   .open {background-color:#f90;}
   .project-details {text-indent:2vw; color:#888;}
   .circle {float:right; display:inline-block; width:3.6vw; height:3.6vw; margin:0; padding:0; background-color:#fff; border-radius:2vw;}
-  .downarrow {border-right:1vw solid #ddd; border-bottom:1vw solid #ddd; width:1vw; height:1vw; transform: rotate(45deg); margin-top:0.6vw; margin-left:0.9vw;}
-  .uparrow {display:none; border-right:1vw solid #f90; border-bottom:1vw solid #f90; width:1vw; height:1vw; transform: rotate(-135deg); margin-top:1vw; margin-left:0.9vw;}
+  .downarrow {border-right:1vw solid #ddd; border-bottom:1vw solid #ddd; width:1vw; height:1vw; transform: rotate(45deg); margin-top:0.6vw; margin-left:0.86vw;}
+  .uparrow {display:none; border-right:1vw solid #f90; border-bottom:1vw solid #f90; width:1vw; height:1vw; transform: rotate(-135deg); margin-top:1vw; margin-left:0.86vw;}
 }
